---------------------------------------------------------------------------------------------------
Version: 0.13.1
Date: 05. 11. 2024
  Bugfixes:
    - Fixed a crash when placing entities if destroy decoratives setting was enabled
---------------------------------------------------------------------------------------------------
Version: 0.13.0
Date: 04. 11. 2024
  Added:
    - Support for Factorio: Space Age!
  Bugfixes:
    - Fixed a recipe migration issue (thanks to kawazoe)
    - Fixed an issue where the Gates technology was not displaying correct strings
  Locales:
    - Updated Chinese Simplified translation
    - Updated Japanese translation
    - Updated Portuguese, Brazilian translation
---------------------------------------------------------------------------------------------------
Version: 0.12.6
Date: 23. 06. 2022
  Bugfixes:
    - Fixed mod contents mismatch error on multiplayer games where decoratives or walls are disabled (thanks to robot256)
  Locales:
    - Added Ukranian translation (thanks to Met_en_Bouldry)
    - Added Japanese translation (thanks to noribento)
    - Updated French translation (thanks to eric.rossignol40)
---------------------------------------------------------------------------------------------------
Version: 0.12.5
Date: 09. 09. 2021
  Bugfixes:
    - Fixed save migration issue if playing with the Walls and Gates setting disabled
---------------------------------------------------------------------------------------------------
Version: 0.12.4
Date: 09. 09. 2021
  Bugfixes:
    - Fixed space science pack incompatibility when using Space Exploration mod
---------------------------------------------------------------------------------------------------
Version: 0.12.3
Date: 08. 09. 2021
  Added:
    - Higher resolution technology and signal icons
    - New Painted concrete and refined concrete icons
    - Glowing lamps are now fast replaceable with normal Lamps
  Changed: