@@ -1,6 +1,6 @@
 {
   "name": "Dectorio",
-  "version": "0.13.0",
+  "version": "0.13.1",
   "title": "Dectorio",
   "author": "PantherX",
   "contact": "",
