@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.13.1
 Date: 05. 11. 2024
+  Changed:
+    - Increased mining speed of flooring tiles to better replicate base game speed
   Bugfixes:
     - Fixed a crash when placing entities if destroy decoratives setting was enabled
 ---------------------------------------------------------------------------------------------------
